--- a/package.json
+++ b/package.json
@@ -61,5 +61,10 @@
     "css-loader": "^6.8.1",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.5"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
